# photo-search-backend

./: README.md  main.py  pyproject.toml
db/: connect_db.py  db_settings.py  query_methods.py
search_process/: __init__.py  search_problems.py  vector_query.py
