[tool.poetry]
name = "photo-search-backend"
version = "0.1.0"
description = ""
authors = ["joonho <jh.lee@spira-t.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
motor = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
